Fixed height in mainContainer on small screens

--- a/apps/pxweb2/src/app/app.module.scss
+++ b/apps/pxweb2/src/app/app.module.scss
@@ -16,6 +16,7 @@
     left: 0px;
     background: var(--px-color-surface-default);
     width: 100%;
+    height: calc(100vh - 88px - 80px);
   }
 
   // medium, large and xlarge
